--- a/src/Publicator.Presentation/appsettings.json
+++ b/src/Publicator.Presentation/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-I4GI6P8\\SQLEXPRESS;Database=Publicator;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
