--- a/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
+++ b/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
