--- a/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
+++ b/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Folder Include="DTO\" />
+    <Folder Include="Exceptions\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
