--- a/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
+++ b/src/Publicator.ApplicationCore/Publicator.ApplicationCore.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Publicator.Infrastructure\Publicator.Infrastructure.csproj" />
   </ItemGroup>
 
