--- a/src/Publicator.Presentation/appsettings.json
+++ b/src/Publicator.Presentation/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "JWTSettings": {
+    "SecretKey": "39769b33-294b-477b-825a-f2c35379b219",
+    "Issuer": "PublicatorServer",
+    "Audience": "PublicatorClient",
+    "Expiration" : 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
