--- a/src/Publicator.Presentation/appsettings.json
+++ b/src/Publicator.Presentation/appsettings.json
@@ -3,7 +3,11 @@
     "SecretKey": "39769b33-294b-477b-825a-f2c35379b219",
     "Issuer": "PublicatorServer",
     "Audience": "PublicatorClient",
-    "Expiration" : 30
+    "Expiration": 30
+  },
+  "EmailSettings": {
+    "Email": "",
+    "Password": ""
   },
   "Logging": {
     "LogLevel": {
