Changed method of get parameters from request

--- a/src/Publicator.Presentation/Publicator.Presentation.csproj
+++ b/src/Publicator.Presentation/Publicator.Presentation.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Publicator.Infrastructure\Publicator.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ResponseModels\" />
+  </ItemGroup>
+
 </Project>
