--- a/src/Publicator.Presentation/ClientApp/package.json
+++ b/src/Publicator.Presentation/ClientApp/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.26",
-    "@types/react": "^16.9.19",
-    "@types/react-dom": "^16.9.5",
+    "axios": "0.19.2",
+    "jquery": "^3.4.1",
+    "qs": "6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "1.0.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "typescript": "^3.7.5"
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
