--- a/src/Publicator.Presentation/ClientApp/package.json
+++ b/src/Publicator.Presentation/ClientApp/package.json
@@ -4,13 +4,20 @@
   "private": true,
   "dependencies": {
     "axios": "0.19.2",
+    "eslint": "^6.8.0",
+    "history": "^3.3.0",
+    "i18next": "^19.1.0",
     "jquery": "^3.4.1",
+    "prop-types": "^15.7.2",
     "qs": "6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.1",
+    "react-redux": "7.1.3",
     "react-router": "1.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redux": "4.0.5",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.88.2"
   },
