--- a/src/Publicator.Presentation/ClientApp/package.json
+++ b/src/Publicator.Presentation/ClientApp/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.3.1",
     "redux": "4.0.5",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.88.2"
+    "semantic-ui-react": "0.88.2",
+    "redux-thunk": "2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
