--- a/src/Publicator.Presentation/Properties/launchSettings.json
+++ b/src/Publicator.Presentation/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 ﻿{
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:53911",
-      "sslPort": 44362
+      "applicationUrl": "http://localhost:53911"
+      //,"sslPort": 44362
     }
   },
   "profiles": {
