--- a/src/Publicator.Presentation/ClientApp/package.json
+++ b/src/Publicator.Presentation/ClientApp/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "eslint-plugin-import": "^2.20.1",
+    "i18next": "^19.3.2",
+    "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.3.3",
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
