--- a/src/Publicator.Presentation/ClientApp/package.json
+++ b/src/Publicator.Presentation/ClientApp/package.json
@@ -11,6 +11,7 @@
     "i18next": "^19.3.2",
     "i18next-browser-languagedetector": "^4.0.2",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.3",
