Added more functionality to create post page

--- a/src/Publicator.Presentation/appsettings.json
+++ b/src/Publicator.Presentation/appsettings.json
@@ -2,8 +2,7 @@
   "JWTSettings": {
     "SecretKey": "39769b33-294b-477b-825a-f2c35379b219",
     "Issuer": "PublicatorServer",
-    "Audience": "PublicatorClient",
-    "Expiration": 30
+    "Audience": "PublicatorClient"
   },
   "EmailSettings": {
     "Email": "",
