--- a/src/Publicator.Presentation/Publicator.Presentation.csproj
+++ b/src/Publicator.Presentation/Publicator.Presentation.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.0.0" />
@@ -20,10 +21,14 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0" />
+    <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Publicator.ApplicationCore\Publicator.ApplicationCore.csproj" />
+    <ProjectReference Include="..\Publicator.Core\Publicator.Core.csproj" />
     <ProjectReference Include="..\Publicator.Infrastructure.Models\Publicator.Infrastructure.Models.csproj" />
     <ProjectReference Include="..\Publicator.Infrastructure\Publicator.Infrastructure.csproj" />
   </ItemGroup>
