Fixed validation issues, added abillity for logging

--- a/src/Publicator.Presentation/appsettings.json
+++ b/src/Publicator.Presentation/appsettings.json
@@ -12,7 +12,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore": "Trace",
+      "Microsoft.AspNetCore.Routing":  "Information"
     }
   },
   "ConnectionStrings": {
