--- a/src/Publicator.Core/Publicator.Core.csproj
+++ b/src/Publicator.Core/Publicator.Core.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Publicator.Infrastructure\Publicator.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Domains\Comment\Commands\" />
+  </ItemGroup>
+
 </Project>
