--- a/src/Publicator.Core/Publicator.Core.csproj
+++ b/src/Publicator.Core/Publicator.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="FluentValidation" Version="9.1.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.1.1" />
     <PackageReference Include="MediatR" Version="8.1.0" />
