--- a/src/Publicator.Presentation/Publicator.Presentation.csproj
+++ b/src/Publicator.Presentation/Publicator.Presentation.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -28,7 +28,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Publicator.ApplicationCore\Publicator.ApplicationCore.csproj" />
     <ProjectReference Include="..\Publicator.Core\Publicator.Core.csproj" />
     <ProjectReference Include="..\Publicator.Infrastructure.Models\Publicator.Infrastructure.Models.csproj" />
     <ProjectReference Include="..\Publicator.Infrastructure\Publicator.Infrastructure.csproj" />
