Added db creation test

--- a/src/Publicator.UnitTests/Publicator.UnitTests.csproj
+++ b/src/Publicator.UnitTests/Publicator.UnitTests.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Publicator.Presentation\Publicator.Presentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CoreTests\" />
+  </ItemGroup>
+
 </Project>
